samples/_failures_safe/1761368451_d2c5c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98332a8a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_98332a8a.c:168:9: error: expected declaration or statement at end of input
  168 |         } else {
      |         ^
./samples/SAFE/__tmp_98332a8a.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98332a8a.c:168:9: error: expected declaration or statement at end of input
